# opal

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
benchmarks/allocator/: CMakeLists.txt  main.cpp
cmake/: CompileShaders.cmake
docs/: design_decisions.md  minspec.md
include/: opal.h
samples/01_enumerate_devices/: CMakeLists.txt  main.cpp
samples/02_buffers/: CMakeLists.txt  main.cpp
samples/02_heap/: CMakeLists.txt  heap.c  heap.h  main.c
samples/03_textures/: CMakeLists.txt  main.cpp
samples/04_triangle/: CMakeLists.txt  app.cpp  app.h  main.cpp  main.osx.mm  main.wasm.cpp  main.wasm.html  main.win.cpp
samples/04_triangle/shaders/directx12/: main.frag.cso  main.frag.hlsl  main.vert.cso  main.vert.hlsl
samples/04_triangle/shaders/metal/: main.frag.metal  main.frag.metallib  main.vert.metal  main.vert.metallib
samples/04_triangle/shaders/vulkan/: main.frag  main.frag.glsl  main.frag.spv  main.vert  main.vert.glsl  main.vert.spv
samples/04_triangle/shaders/webgpu/: main.frag.wgsl  main.vert.wgsl
samples/05_opal/: CMakeLists.txt  main.cpp
samples/05_opal/shaders/vulkan/: main.frag  main.frag.spv  main.vert  main.vert.spv
samples/05_rt_triangle/: CMakeLists.txt  app.cpp  app.h  main.osx.mm  main.wasm.html  main.win.cpp
samples/05_rt_triangle/shaders/directx12/: main.rchit.cso  main.rchit.hlsl  main.rgen.cso  main.rgen.hlsl  main.rmiss.cso  main.rmiss.hlsl
samples/05_rt_triangle/shaders/metal/: main.comp.metal  main.comp.metallib
samples/05_rt_triangle/shaders/vulkan/: main.rchit.glsl  main.rchit.spv  main.rgen.glsl  main.rgen.spv  main.rmiss.glsl  main.rmiss.spv
samples/06_gpu_particles/: CMakeLists.txt  app.cpp  app.h  main.osx.mm  main.wasm.html  main.win.cpp
samples/06_gpu_particles/shaders/directx12/: emit.comp.cso  emit.comp.hlsl  render.frag.cso  render.frag.hlsl  render.vert.cso  render.vert.hlsl  simulate.comp.cso  simulate.comp.hlsl
samples/06_gpu_particles/shaders/vulkan/: emit.comp.glsl  emit.comp.spv  render.frag.glsl  render.frag.spv  render.vert.glsl  render.vert.spv  simulate.comp.glsl  simulate.comp.spv
samples/06_gpu_particles/shaders/webgpu/: emit.comp.wgsl  render.frag.wgsl  render.vert.wgsl  simulate.comp.wgsl
src/: CMakeLists.txt  opal.c  opal_internal.c  opal_internal.h
src/common/: bump.c  bump.h  heap.c  heap.h  intrinsics.h  pool.c  pool.h  ring.c  ring.h
src/directx12/: directx12_allocator.c  directx12_device.c  directx12_guids.c  directx12_instance.c  directx12_internal.h  directx12_utils.c
src/metal/: metal_allocator.m  metal_device.m  metal_instance.c  metal_instance.m  metal_internal.h  metal_utils.m
src/null/: null_device.c  null_instance.c  null_internal.h
src/stubs/: directx12_stub.c  metal_stub.c  vulkan_stub.c  webgpu_stub.c
src/vulkan/: vulkan_allocator.c  vulkan_device.c  vulkan_instance.c  vulkan_internal.h  vulkan_platform_win32.c  vulkan_utils.c
src/webgpu/: webgpu_device.c  webgpu_instance.c  webgpu_internal.h  webgpu_utils.c
tests/heap/: CMakeLists.txt  main.cpp
tests/pool/: CMakeLists.txt  main.cpp
